# nexus

./: .gitignore  build.bat  build.sh  configure.bat  configure.sh  continuous_build.py  install.ps1  install.sh  run_cmake.bat  
Applications/AsterMarketDataFeedClient/: CMakeLists.txt  version.bat  version.sh
Applications/AsterMarketDataFeedClient/Application/: check.sh  setup.py  start.sh  stop.sh
Applications/AsterMarketDataFeedClient/Source/: main.cpp
Applications/Lollipop/: CMakeLists.txt  PreLoad.cmake  configure.bat  version.bat  version.sh
Applications/Lollipop/Resources/: Resources.qrc
Applications/RiskServer/: CMakeLists.txt  build.bat  configure.sh  version.bat  version.sh
Applications/RiskServer/Application/: check.sh  check_server.sh  config.default.yml  moe.py  positions.py  reset.py  setup.py  start.sh  start_server.sh  stop.sh  stop_server.sh
Applications/RiskServer/Source/: main.cpp
Applications/Spire/: CLAUDE.md  CMakeLists.txt  Directory.Build.props  configure.bat  configure.sh  version.bat  version.sh
Applications/Spire/Resources/: Resources.qrc
Applications/Spire/Source/: LoginDialog.cpp  LoginDialog.ui  main.cpp
Applications/TelemetryServer/: CMakeLists.txt  version.bat  version.sh
Applications/TelemetryServer/Application/: check.sh  check_server.sh  config.default.yml  query.py  start.sh  start_server.sh  stop.sh  stop_server.sh
Applications/TelemetryServer/Source/: main.cpp
Nexus/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh  setup.bat  setup.sh  version.bat  version.sh
Nexus/Config/: dependencies.cmake  dependencies.posix.cmake  dependencies.windows.cmake  lua.cmake
Nexus/Config/Accounting/: CMakeLists.txt
Nexus/Config/AdministrationService/: CMakeLists.txt
Nexus/Config/Backtester/: CMakeLists.txt
Nexus/Config/ChartingService/: CMakeLists.txt
Nexus/Config/Compliance/: CMakeLists.txt
Nexus/Config/Definitions/: CMakeLists.txt
Nexus/Config/DefinitionsService/: CMakeLists.txt
Nexus/Config/FeeHandling/: CMakeLists.txt
Nexus/Config/FixUtilities/: CMakeLists.txt
Nexus/Config/InternalMatcher/: CMakeLists.txt
Nexus/Config/MarketDataService/: CMakeLists.txt
Nexus/Config/MoldUdp64/: CMakeLists.txt
Nexus/Config/Nexus/: CMakeLists.txt
Nexus/Config/OrderExecutionService/: CMakeLists.txt
Nexus/Config/Parsers/: CMakeLists.txt
Nexus/Config/Python/: CMakeLists.txt
Nexus/Config/Queries/: CMakeLists.txt
Nexus/Config/RiskService/: CMakeLists.txt
Nexus/Config/SimulationMatcher/: CMakeLists.txt
Nexus/Config/SoupBinTcp/: CMakeLists.txt
Nexus/Config/Stamp/: CMakeLists.txt
Nexus/Config/TechnicalAnalysis/: CMakeLists.txt
Nexus/Config/TelemetryService/: CMakeLists.txt
Nexus/Include/Nexus/: Nexus.hpp
Nexus/Source/AccountingTester/: main.cpp
Nexus/Source/AccountingTests/: BookkeeperReactorTester.cpp  BuyingPowerModelTester.cpp  BuyingPowerTrackerTester.cpp  InventorySnapshotModelTester.cpp  InventorySnapshotTester.cpp  InventoryTester.cpp  PortfolioControllerTester.cpp  PortfolioMonitorTester.cpp  PortfolioTester.cpp  PositionOrderBookTester.cpp  PositionTester.cpp  ShortingModelTester.cpp  ShortingTrackerTester.cpp  TrueAverageBookkeeperTester.cpp  main.cpp
Nexus/Source/AdministrationServiceTester/: main.cpp
Nexus/Source/AdministrationServiceTests/: AccountIdentityTester.cpp  AccountModificationRequestTester.cpp  AccountRolesTester.cpp  AdministrationClientTester.cpp  AdministrationServletTester.cpp  CachedAdministrationDataStoreTester.cpp  EntitlementModificationTester.cpp  LocalAdministrationDataStoreTester.cpp  MessageTester.cpp  NotificationTester.cpp  RiskModificationTester.cpp  ServiceAdministrationClientTester.cpp  SqlAdministrationDataStoreTester.cpp  TradingGroupTester.cpp  main.cpp
Nexus/Source/BacktesterTester/: main.cpp
Nexus/Source/BacktesterTests/: ActiveBacktesterEventTester.cpp  BacktesterEnvironmentTester.cpp  BacktesterEventHandlerTester.cpp  BacktesterEventTester.cpp  BacktesterMarketDataClientTester.cpp  BacktesterMarketDataServiceTester.cpp  BacktesterOrderExecutionClientTester.cpp  BacktesterServiceClientsTester.cpp  BacktesterTimeClientTester.cpp  BacktesterTimerTester.cpp  CutoffHistoricalDataStoreTester.cpp
Nexus/Source/ChartingServiceTests/: ChartingClientTester.cpp  ChartingServletTester.cpp  SecurityChartingQueryTester.cpp  ServiceChartingClientTester.cpp  TickerChartingQueryTester.cpp  main.cpp
Nexus/Source/ComplianceTester/: main.cpp
Nexus/Source/ComplianceTests/: BuyingPowerComplianceRuleTester.cpp  CachedComplianceRuleDataStoreTester.cpp  CancelRestrictionPeriodComplianceRuleTester.cpp  ComplianceCheckOrderExecutionDriverTester.cpp  ComplianceParameterTester.cpp  ComplianceRuleBuilderTester.cpp  ComplianceRuleEntryTester.cpp  ComplianceRuleSchemaTester.cpp  ComplianceRuleSetTester.cpp  ComplianceRuleTester.cpp  ComplianceRuleViolationRecordTester.cpp  ComplianceServletTester.cpp  LocalComplianceRuleDataStoreTester.cpp  MapComplianceRuleTester.cpp  OpposingCancelComplianceRuleTester.cpp  OpposingOrderCancellationComplianceRuleTester.cpp  OpposingOrderSubmissionComplianceRuleTester.cpp  OpposingSubmissionComplianceRuleTester.cpp  OrderCountLimitComplianceRuleTester.cpp  RegionFilterComplianceRuleTester.cpp  RejectCancelsComplianceRuleTester.cpp  RejectSubmissionsComplianceRule.cpp  RejectSubmissionsComplianceRuleTester.cpp  ScopeFilterComplianceRuleTester.cpp  SecurityFilterComplianceRuleTester.cpp  ServiceComplianceClientTester.cpp  SqlComplianceRuleDataStoreTester.cpp  SubmissionRestrictionPeriodComplianceRuleTester.cpp  SymbolRestrictionComplianceRuleTester.cpp  TimeFilterComplianceRuleTester.cpp
Nexus/Source/DefinitionsServiceTests/: DefinitionsClientTester.cpp  DefinitionsServletTester.cpp  ServiceDefinitionsClientTester.cpp
Nexus/Source/DefinitionsTester/: main.cpp
Nexus/Source/DefinitionsTests/: AssetTester.cpp  BboQuoteTester.cpp  BookQuoteTester.cpp  CountryTester.cpp  CurrencyPairTester.cpp  CurrencyTester.cpp  DestinationTester.cpp  ExchangeRateTableTester.cpp  ExchangeRateTester.cpp  FixTagsTester.cpp  InstrumentTester.cpp  (+27 more)
(+5942 files in other folders)
